# voicehero

./: .gitignore  README.md  pyproject.toml
src/voicehero/: __init__.py  cli.py  config.py  config_cmd.py  convert_cmd.py  hotkey.py  logger.py  recorder.py  transcriber.py
tests/: test_recorder.py
